compiler/testData/asJava/lightClasses/compilationErrors/JvmPackageName.kt
// a.b.c.JvmPackageNameKt
// IGNORE_BACKEND: ANY
@file:JvmPackageName("a.b.c")
package p

fun f() {

}